smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-no-newline.smithy
// Syntax error at line 3, column 19: Expected a line break, but found IDENTIFIER('string') | Model
$version: "2.0"
namespace com.foo string Foo
